Upgrade spring 3.0